# carte

./: .gitignore  .python-version  Makefile  README.md  config.cfg  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pull_request.yml  pypipublish.yml
carte/: __main__.py  main.py
carte/extractor/: glue_extractor.py
carte/loader/: carte_loader.py
carte/model/: job_metadata.py
carte/utils/: config_parser.py  frontmatter.py
carte_cli/: main.py
carte_cli/extractor/: glue_extractor.py  json_schema_extractor.py
carte_cli/loader/: carte_loader.py
carte_cli/model/: carte_table_model.py  job_metadata.py
carte_cli/publisher/: remove_deleted_publisher.py
carte_cli/scaffolding/: frontend.py
carte_cli/utils/: config_parser.py  file_io.py  flatten.py  frontmatter.py  yaml.py
carte_cli/utils/templates/: dataset_flattened.md
flyover/: __main__.py
flyover/extractor/: glue_extractor.py
flyover/loader/: carte_loader.py
flyover/model/: carte_table_model.py
flyover/utils/: config_parser.py  create_toc.py  frontmatter.py
procure/loader/: carte_loader.py
procure/model/: job_metadata.py
procure/utils/: frontmatter.py
tests/extractor/: test_glue_extractor.py  test_json_schema_extractor.py
tests/loader/: test_carte_loader.py
tests/model/: test_carte_table_model.py
tests/publisher/: test_remove_deleted_publisher.py
tests/testutils/: load_test_json.py
tests/utils/: test_frontmatter.py
