[tool.poetry]
name = "carte-cli"
version = "0.3.9"
description = "A static site generator for data catalogs"
authors = ["Balint Haller <balint@hey.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://cartedata.com"
repository = "https://github.com/carte-data/carte"
documentation = "https://docs.cartedata.com"

[tool.poetry.scripts]
carte = "carte_cli.main:app"

[tool.poetry.dependencies]
python = "^3.7"
amundsen-databuilder = "4.2.2"
"ruamel.yaml" = "~0.16.12"
boto3 = "~1.17.2"
typer = "~0.3.2"
click-spinner = "~0.1.10"
psycopg2 = { version = "~2.8.6", optional = true }
SQLAlchemy = { version = "~1.4.18", optional = true }
Jinja2 = "~2.11.3"

[tool.poetry.extras]
postgres = ["psycopg2", "SQLAlchemy"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
